<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ResetPasswordActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_marginTop="80dp"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22dp"
            android:id="@+id/txvRecuperarContraseña"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/titulo_recuperar_contraseña"
            android:drawableLeft="@drawable/ic_edt_password_recovery"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14dp"
        android:id="@+id/parrafoRecuperarContraseña"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/parrafo_recuperar_contraseña"

        />

</com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="20dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        android:layout_gravity="center_horizontal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmailRecovery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edtEmail"
            android:drawableLeft="@drawable/ic_edt_email"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimaryDark"
            android:inputType="textEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorTextButton"
        android:textSize="12dp"
        android:id="@+id/btnRecuperarClave"
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/titulo_recuperar_contraseña"


        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegresarMenuPrincipal"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Icon"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/cancelar_ir_main"
        android:layout_marginTop="0dp"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"

        />

</LinearLayout>